Dark theme but man i think i overdid it also I need to transition the background but idk how

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,11 @@
 @import "./globals/theme.scss";
 
 .website {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  min-width: $page-minimum-width;
   @include themed() {
     background: linear-gradient(
       90deg,
@@ -9,12 +14,6 @@
       t($background-sides) 110%
     );
   }
-
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  min-width: $page-minimum-width;
 }
 
 ::-webkit-scrollbar {
@@ -26,7 +25,5 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  @include themed() {
-    background: t($primary);
-  }
+  background: #02141e;
 }
