--- a/src/routes/vita/vita.styles.scss
+++ b/src/routes/vita/vita.styles.scss
@@ -5,11 +5,13 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  transition: all $theme-transition;
   .stats-container {
     height: 39vw;
     min-height: 800px;
     width: 90%;
     display: flex;
     flex-direction: row;
+    transition: all $theme-transition;
   }
 }
