--- a/src/routes/components/pageHeader/pageheader.styles.scss
+++ b/src/routes/components/pageHeader/pageheader.styles.scss
@@ -18,14 +18,16 @@
     height: 5vmax;
     border-radius: 10px;
     margin-bottom: 20px;
-    border: 5px solid black;
+    transition: all $theme-transition;
     text-align: center;
-    transition: background-color 0.3s;
+    @include themed() {
+      border: 5px solid darken(t($primary), 25%);
+    }
 
     .text {
       font-size: 1.7vw;
-      color: white;
       font-family: $theme-font;
+      color: white;
     }
   }
   .Header:hover {
