--- a/src/routes/portfolio/portfolio.styles.scss
+++ b/src/routes/portfolio/portfolio.styles.scss
@@ -19,9 +19,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
     margin: 0 7.5px 15px;
     overflow: hidden;
+
+    @include themed() {
+      border: 1px solid t($border-color);
+    }
 
     &:hover {
       cursor: pointer;
@@ -62,10 +65,13 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      border: 1px solid black;
-      background-color: white;
       opacity: 0.7;
       position: absolute;
+
+      @include themed() {
+        border: 1px solid t($border-color);
+        background-color: t($container-color);
+      }
 
       h2 {
         font-weight: bold;
