--- a/src/routes/bottombar.styles.scss
+++ b/src/routes/bottombar.styles.scss
@@ -11,7 +11,7 @@
   margin-top: 50px;
   min-width: $page-minimum-width;
   min-width: 771px;
-  transition: all $theme-transition;
+  transition: background-color $theme-transition, box-shadow $theme-transition;
 
   @include themed() {
     background-color: t($container-color);
