--- a/src/routes/home/explore_button/venturebutton.styles.scss
+++ b/src/routes/home/explore_button/venturebutton.styles.scss
@@ -15,7 +15,7 @@ $borderRadius: 4px;
   font-family: $theme-font;
   text-decoration: none;
   font-size: 1.5vw;
-  transition: all $buttonTransitionTime;
+  transition: all $buttonTransitionTime, background-color $theme-transition;
   border-width: 0px;
 
   @include themed() {
@@ -29,6 +29,7 @@ $borderRadius: 4px;
     width: 99.4%;
     left: 8px;
     transform: skewX(45deg);
+    transition: all $buttonTransitionTime, background-color $theme-transition;
     @include themed() {
       background-color: darken(t($primary), 10%);
     }
@@ -45,6 +46,7 @@ $borderRadius: 4px;
     @include themed() {
       background-color: darken(t($primary), 30%);
     }
+    transition: all $buttonTransitionTime, background-color $theme-transition;
   }
 
   &:active {
@@ -67,5 +69,6 @@ $borderRadius: 4px;
     @include themed() {
       background-color: t($sub-primary);
     }
+    transition: all $buttonTransitionTime, background-color 0.3s;
   }
 }
