--- a/src/routes/navigation.styles.scss
+++ b/src/routes/navigation.styles.scss
@@ -12,7 +12,7 @@
   align-items: center;
   border-radius: 17px;
   margin-bottom: 40px;
-  transition: all 1.6s;
+  transition: all $theme-transition;
 
   @include themed() {
     background-color: t($container-color);
@@ -25,6 +25,7 @@
     justify-content: flex-end;
     padding-right: 1.5vw;
     height: 70%;
+    transition: all $theme-transition;
   }
 
   .home-box {
@@ -38,7 +39,7 @@
     min-width: 300px;
     padding-left: 2vw;
     text-decoration: none;
-    transition: transform 0.25s ease-out;
+    transition: transform 0.25s ease-out, color $theme-transition;
 
     @media screen and (max-width: 1460px) {
       font-size: 22px;
@@ -119,7 +120,7 @@
       font-family: $theme-font;
       color: t($text-color);
     }
-
+    transition: color $theme-transition;
     font-size: 0.9vw;
   }
 
