--- a/src/routes/contactme/contactbox/ContactBox.styles.scss
+++ b/src/routes/contactme/contactbox/ContactBox.styles.scss
@@ -1,4 +1,4 @@
-@import "../../../globals/theme.scss";
+@import "../../../globals/_theme.scss";
 $buttonTransitionTime: 0.07s;
 $borderRadius: 4px;
 
@@ -19,7 +19,7 @@ $contact-sidesgap: 2.5rem;
 
   font-family: $theme-font;
   min-width: 710px;
-  transition: all 1.6s;
+  transition: all $theme-transition;
 
   display: flex;
   flex-direction: row;
@@ -32,7 +32,7 @@ $contact-sidesgap: 2.5rem;
   &::before {
     //bottom side
     @extend %test;
-    bottom: -19px;
+    bottom: -18px;
     height: 17px;
     width: 100%;
     left: 9px;
@@ -57,7 +57,7 @@ $contact-sidesgap: 2.5rem;
 }
 
 .Contact-Container:hover {
-  transition: all 0.4s;
+  transition: all 0.5s;
   margin-left: -120px;
   //margin-bottom: 50px;
   height: 15vh;
@@ -67,8 +67,10 @@ $contact-sidesgap: 2.5rem;
 
   &::before {
     //bottom
-    height: 29px;
-    left: 14px;
+    height: 25px;
+    left: 12px;
+    bottom: -25px;
+    width: 101%;
     @include themed() {
       box-shadow: -15px 25px 15px t($shadow-color);
     }
@@ -76,9 +78,9 @@ $contact-sidesgap: 2.5rem;
 
   &::after {
     //right
-    right: -28px;
-    width: 28px;
-    bottom: -5px;
+    right: -24px;
+    width: 24px;
+    bottom: -10px;
     height: 96%;
     @include themed() {
       box-shadow: 25px 10px 15px t($shadow-color);
