--- a/src/routes/components/pageHeader/pageheader.styles.scss
+++ b/src/routes/components/pageHeader/pageheader.styles.scss
@@ -15,7 +15,7 @@
     justify-content: center;
     align-items: center;
     width: 55%;
-    height: 5vmax;
+    height: 9.5vh;
     border-radius: 10px;
     margin-bottom: 20px;
     transition: background-color $theme-transition;
