--- a/src/routes/bottombar.styles.scss
+++ b/src/routes/bottombar.styles.scss
@@ -1,7 +1,7 @@
 @import "../globals/_theme.scss";
 
 .bottombar {
-  height: 7rem;
+  height: 13vh;
   width: 65%;
   display: flex;
   justify-content: space-between;
