--- a/src/routes/feedback/feedback.styles.scss
+++ b/src/routes/feedback/feedback.styles.scss
@@ -6,4 +6,20 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+
+  .give-feedback-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    @include themed() {
+      background-color: t($sub-primary);
+    }
+    border: 3px solid grey;
+    border-radius: 4px;
+    transition: background-color $theme-transition, border $theme-transition;
+    margin: 5px;
+    gap: 10px;
+  }
 }
