--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -13,12 +13,13 @@ $borderRadius: 4px;
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 66vh;
 }
 
 .button-container {
   width: 100%;
-  height: 140px;
-  margin-top: 15px;
+  height: 40px;
+  margin-top: 5vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -26,8 +27,8 @@ $borderRadius: 4px;
 }
 
 .intro-container {
-  margin-top: 55px;
-  height: 26vw;
+  margin-top: 25px;
+  height: 50vh;
   width: 55%;
 
   display: flex;
