--- a/src/routes/feedback/feedbackinput/feedbackinput.styles.scss
+++ b/src/routes/feedback/feedbackinput/feedbackinput.styles.scss
@@ -5,3 +5,9 @@
   display: flex;
   flex-direction: column;
 }
+.name-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+}
