--- a/src/routes/feedback/feedbackentry/feedbackentry.styles.scss
+++ b/src/routes/feedback/feedbackentry/feedbackentry.styles.scss
@@ -9,7 +9,7 @@ $borderRadius: 4px;
 
 .feedback-entry {
   width: 50vw;
-  height: 13vh;
+  min-height: 13vh;
   margin-bottom: 9px;
   margin-top: 10px;
   transform: translate(-2%, -2%);
