--- a/src/routes/feedback/feedbackentry/feedbackentry.styles.scss
+++ b/src/routes/feedback/feedbackentry/feedbackentry.styles.scss
@@ -9,7 +9,7 @@ $borderRadius: 4px;
 
 .feedback-entry {
   width: 50vw;
-  min-height: 13vh;
+  height: 13vh;
   margin-bottom: 9px;
   margin-top: 10px;
   transform: translate(-2%, -2%);
@@ -19,8 +19,10 @@ $borderRadius: 4px;
   transition: all $theme-transition;
 
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+  align-items: start;
+  gap: 5px;
+  padding: 2vh;
   @include themed() {
     background-color: t($container-color);
     color: t($text-color);
@@ -49,6 +51,22 @@ $borderRadius: 4px;
     transform: skewY(45deg);
     @include themed() {
       background-color: darken(t($container-color), 25%);
+    }
+  }
+
+  .name-container {
+    transition: all $theme-transition;
+    font-weight: 500;
+    @include themed() {
+      color: t($text-color);
+      border-bottom: 2px solid t($text-color);
+    }
+  }
+  .message-container {
+    width: 95%;
+    height: 100%;
+    @include themed() {
+      background-color: darken(t($container-color), 40%);
     }
   }
 }
