--- a/src/routes/feedback/feedbackentry/feedbackentry.styles.scss
+++ b/src/routes/feedback/feedbackentry/feedbackentry.styles.scss
@@ -22,7 +22,7 @@ $borderRadius: 4px;
   flex-direction: column;
   align-items: start;
   gap: 5px;
-  padding: 2vh;
+  padding: 1vh;
   @include themed() {
     background-color: t($container-color);
     color: t($text-color);
@@ -63,10 +63,11 @@ $borderRadius: 4px;
     }
   }
   .message-container {
-    width: 95%;
+    width: 97.7%;
     height: 100%;
+    padding: 10px;
     @include themed() {
-      background-color: darken(t($container-color), 40%);
+      background-color: darken(t($background), 8%);
     }
   }
 }
