--- a/src/routes/feedback/feedbackentry/feedbackentry.styles.scss
+++ b/src/routes/feedback/feedbackentry/feedbackentry.styles.scss
@@ -21,7 +21,7 @@ $borderRadius: 4px;
 
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   gap: 5px;
   padding: 1vh;
   @include themed() {
@@ -68,13 +68,14 @@ $borderRadius: 4px;
     height: 100%;
     padding: 10px;
     overflow-y: hidden;
+    transition: all $theme-transition;
     // @include themed() {
     //   background-color: darken(t($background), 8%);
     // }
   }
 }
 .feedback-entry:hover {
-  transition: all 0.5s;
+  transition: all $theme-transition;
   margin-left: -120px;
   min-height: 13vh;
   max-height: none;
