--- a/src/routes/vita/vita.styles.scss
+++ b/src/routes/vita/vita.styles.scss
@@ -7,9 +7,9 @@
   width: 100%;
   transition: all $theme-transition;
   .stats-container {
-    height: 39vw;
+    height: 50vw;
     min-height: 800px;
-    width: 90%;
+    width: 95%;
     display: flex;
     flex-direction: row;
     transition: all $theme-transition;
@@ -20,15 +20,15 @@
     flex-direction: row;
     justify-content: flex-start;
     gap: 5px;
-    width: 60vw;
-    height: 12vh !important;
+    width: 50vw;
+    height: 11.5vh !important;
 
     padding-top: 10px;
     position: sticky;
     top: 0;
   }
 
-  $buttonTransitionTime: 0.1s;
+  $buttonTransitionTime: 0.15s;
 
   %test {
     position: absolute;
@@ -37,8 +37,8 @@
   }
 
   $button-height: 100%;
-  $button-width: 15vw;
-  $button-font-size: 1vw;
+  $button-width: 12.5vw;
+  $button-font-size: 1vmax;
   $button-transform: translate(0%, 5%);
   $button-left-margin: 5px;
   $button-border-radius: 2px;
@@ -64,7 +64,7 @@
       @extend %test;
       bottom: -14px;
       height: 15px;
-      width: 100%;
+      width: 100.4%;
       left: 8px;
       transform: skewX(45deg);
       @include themed() {
@@ -76,9 +76,9 @@
       // right side
       @extend %test;
       right: -17px;
-      height: 98%;
+      height: 96%;
       width: 17px;
-      bottom: -7px;
+      bottom: -6px;
       transform: skewY(45deg);
       @include themed() {
         background-color: darken(t($primary), 30%);
@@ -86,7 +86,6 @@
     }
 
     &:active {
-      margin-left: $button-left-margin;
       transform: $button-transform;
 
       &::before {
@@ -111,8 +110,7 @@
         // right side
         @extend %test;
         right: -15px;
-        height: 100%;
-        width: 16px;
+        height: 96%;
         bottom: -7px;
         transform: skewY(45deg);
 
@@ -179,8 +177,7 @@
       // right side
       @extend %test;
       right: -15px;
-      height: 100%;
-      width: 16px;
+      height: 96%;
       bottom: -7px;
       transform: skewY(45deg);
 
