--- a/src/routes/vita/stats/stats.styles.scss
+++ b/src/routes/vita/stats/stats.styles.scss
@@ -27,16 +27,14 @@
     transition: all $theme-transition;
   }
 
-  $bioSideMargin: 40px;
+  $bioSideMargin: 30px;
 
   .bio {
-    width: 95%;
+    width: 97%;
     height: 100%;
     margin: 0 auto;
     display: flex;
-    flex-direction: row;
-    border-radius: 5px;
-    border-right-width: 0px;
+    flex-direction: column;
 
     margin-top: $bioSideMargin;
     margin-bottom: $bioSideMargin;
